owerload on small screens fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,17 +12,14 @@ body {
     padding: 0;
     font-size: 12px;
     font-weight: normal;
-    direction: rtl;
     box-sizing: border-box;
     background-color: $backgroundClr;
 }
 
 .App{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+    direction: rtl;
+    width: 100%;
+    overflow: auto;
 }
 strong{
     font-weight: 60%;
