--- a/src/components/DealMenu/DealMenu.scss
+++ b/src/components/DealMenu/DealMenu.scss
@@ -1,13 +1,13 @@
 @import "../../styles/config";
 
 .DealMenu {
-  margin-bottom: 5em;
+margin-bottom: 5em;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   align-content: center;
-  justify-content: space-between;
-  width: $containerWidth;
+  justify-content: center;
+
 }
 
 @media only screen and (max-width: 768px) {
