--- a/src/components/DealMenu/DealPack/DealPack.scss
+++ b/src/components/DealMenu/DealPack/DealPack.scss
@@ -8,6 +8,7 @@
   position: relative;
   text-align: center;
   padding-bottom: 25px;
+  margin: 10px;
   height: 520px;
   line-height: 1;
   & > *{
