--- a/src/components/DealMenu/DealPack/PackLongTerms/PackLongTerms.scss
+++ b/src/components/DealMenu/DealPack/PackLongTerms/PackLongTerms.scss
@@ -1,7 +1,7 @@
 .PackLongTerms {
   position: relative;
   left: 60px;
-  bottom: -40px;
+  bottom: -60px;
 
    &:before {
     content: "";
