--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .Header{
-    width: 100%;
+width: 100%;
 padding: 10px;
 display: flex;
 justify-content: space-between;
@@ -24,6 +24,12 @@ justify-content: space-between;
 
 
 @media (max-width: 768px) {
+
+    .Header{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
     .small-logo {
         display: block;
     }
